
Package: PSCBS
==============

Version: 0.36.2 [2013-09-18]
o DOCUMENTATION: Added vignette 'Total copy-number segmentation using CBS'.
o ROBUSTNESS: Now package declares S3 methods in the NAMESPACE.
o ROBUSTNESS: Package vignettes no longer assumes that the 'R.rsp'
  package is attached.
o Bumped up package dependencies.


Version: 0.36.1 [2013-09-10]
o CLEANUP: Package no longer utilizes ':::'.


Version: 0.36.0 [2013-08-15]
o Made extractMinorMajorCNs() for PairedPSCBS acknowledge additional
  fields related to (C1,C2).


Version: 0.35.6 [2013-08-01]
o Updated the vignettes to utilize the new R.rsp features.


Version: 0.35.5 [2013-07-19]
o ROBUSTNESS: Added a sanity check on the estimates of (tauA, tauB)
  when they are estimated from data in segmentByNonPairedPSCBS().


Version: 0.35.4 [2013-07-11]
o Updated the Makefile for the vignettes and added .Rinstignore such
  that auxillary (bib and bst) LaTeX files are not installed but
  part of the build so they are available to R CMD check, which
  is recently needed by R devel.
o Bumped up package dependencies.


Version: 0.35.3 [2013-05-25]
o Minor speedup by replacing all rm(x) with x <- NULL, cf. R-devel
  thread 'Assigning NULL to large variables is much faster than rm() -
  any reason why I should still use rm()?' on May 25, 2013.


Version: 0.35.2 [2013-05-20]
o CRAN POLICY: Now all Rd \usage{} lines are at most 90 characters long.


Version: 0.35.1 [2013-05-07]
o Now estimateDeltaCN() for PairedPSCBS adjust for the ploidy if set.
o Added ploidy() and ploidy()<- for AbstractCBS.
o Now tileChromosomes() no longer gives warnings on "max(i): no
  non-missing arguments to max; returning -Inf".


Version: 0.35.0 [2013-04-23]
o SPEEDUP: Now bootstrapTCNandDHByRegion() for PairedPSCBS always
  estimates the default quantiles in addition to any requested ones.
o SPEEDUP: Made bootstrapTCNandDHByRegion() much faster by adding
  use.names=FALSE to two internal unlist() statements.