@@ -7,7 +7,7 @@ all: vignettes tex index.html
 
 # Build all vignettes that has a %\VignetteBuild{} markup
 vignettes:
-	"$(R)" -e "if (getRversion() < 3 || packageVersion('R.rsp') < '0.9.1') R.rsp::buildNonSweaveVignettes()"
+	"$(R)" -e "if (getRversion() < 3) R.rsp::buildNonSweaveVignettes()"
 
 # Compile any TeX files for which a PDF is missing
 tex:
@@ -15,7 +15,7 @@ tex:
 
 # Create an HTML vignette index page
 index.html:
-	"$(R)" -e "if (getRversion() < 3 || packageVersion('R.rsp') < '0.9.1') R.rsp::buildPkgIndexHtml()"
+	"$(R)" -e "if (getRversion() < 3) R.rsp::buildPkgIndexHtml()"
 
 # Certain LaTeX files (e.g. bib, bst, sty) must be part of the build 
 # such that they are available for R CMD check.  These are excluded
