@@ -22,18 +22,8 @@
   You should expect the API to be changing over time.
 }
 
-\section{Requirements}{
-  This package requires external packages
-  R.utils (>= 1.26.2), utils, R.methodsS3 (>= 1.4.4), R.oo (>= 1.13.9), R.utils (>=
-1.26.2), DNAcopy (>= 1.27.2), R.rsp (>= 0.9.17),
-  and also suggests DNAcopy (>= 1.27.2), aroma.light (>= 1.28.0), matrixStats (>=
-0.8.5), R.cache (>= 0.7.1), Hmisc (>= 3.12-2), ggplot2 (>=
-0.9.3.1), R.devices (>= 2.5.0), R.rsp (>= 0.9.17).
-}
-
 \section{Installation and updates}{
   To install this package, use \code{install.packages("PSCBS")}.
-  Inorder to run examples, also \code{install.packages("PSCBS.data")}.
 }
 
 \section{To get started}{
