@@ -4,9 +4,14 @@ Package: PSCBS
 
 Version: 0.36.2 [2013-09-18]
 o DOCUMENTATION: Added vignette 'Total copy-number segmentation using CBS'.
+o ROBUSTNESS: Now package imports 'matrixStats' (previously suggested).
 o ROBUSTNESS: Now package declares S3 methods in the NAMESPACE.
 o ROBUSTNESS: Package vignettes no longer assumes that the 'R.rsp'
   package is attached.
+o WORKAROUND: For R (< 3.0.0), hclustCNs() for AbstractCBS would generate
+  'Error in rowAlls(ok) : could not find function "loadMethod"'. This
+  seems to be a bug in R (< 3.0.0), which we can avoid by attach the
+  'methods' package in hclustCNs().
 o Bumped up package dependencies.
 
 
